--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <h2>Projeto EDOO</h2>
         <div id="autores">
-            <a href="">Carlos Eduardo Teixeira,</a>
-            <a href="">João Victor Acioly</a>
+            <a href="https://github.com/CaduFalcaoT" target="_blank">Carlos Eduardo Teixeira,</a>
+            <a href="https://github.com/jvacioly" target="_blank">João Victor Acioly</a>
         </div>
     </header>
     <div id="heroBanner">
@@ -25,7 +25,7 @@
             <p>Aplicativo exclusivo de pedidos e gestão online para um restaurante, permitindo aos clientes visualizar o cardápio, fazer pedidos, enquanto o restaurante gerencia pedidos, estoque e pagamentos de forma centralizada.</p>
             <div id="heroBtns">
                 <a href="https://github.com/jvacioly/ProjetoEDOO" target="_blank"><button id="button1">Código</button></a>
-                <a href="" target="_blank"><button id="button2">Relatório</button></a>
+                <a href="ProjetoEDOO/front-end/imagens/index_images/ProjetoEDOO.pdf" target="_blank"><button id="button2">Relatório</button></a>
             </div>
         </div>
         <img src="ProjetoEDOO/front-end/imagens/index_images/heroImage.jpg" alt="Sistema de Gerenciamento de Restaurante">
@@ -72,12 +72,12 @@
         <div id="POO">
             <p>O <strong>ProjetoEDOO</strong> utiliza <strong>HTML, CSS e JavaScript</strong> no front-end para criar uma interface intuitiva, enquanto o back-end é desenvolvido em <strong>C++</strong> com armazenamento de dados em <strong>JSON</strong>. Para garantir comunicação em tempo real entre clientes e restaurante, implementamos WebSockets usando <strong>CivetWeb</strong>, permitindo que pedidos, status de entrega e atualizações de estoque sejam transmitidos instantaneamente sem a necessidade de recarregar a página, tornando o sistema mais dinâmico e eficiente.</p>
             <p>
-                O <strong>ProjetoEDOO</strong> foi desenvolvido seguindo os princípios da <strong>Programação Orientada a Objetos (POO)</strong>, garantindo modularidade, reutilização de código e organização eficiente. O sistema é estruturado em quatro principais classes:
+                O proketo foi desenvolvido seguindo os princípios da <strong>Programação Orientada a Objetos (POO)</strong>, garantindo modularidade, reutilização de código e organização eficiente. O sistema é estruturado em quatro principais classes:
             </p>
         
             <ul>
                 <li><strong>Produto:</strong> Representa os itens do estoque, contendo nome, preço, categoria e medidas.</li>
-                <li><strong>Prato:</strong> Herda a classe Produto, representa os itens do cardápio, adicionando ingredientes e permitindo personalização.</li>
+                <li><strong>Prato:</strong> Herda a classe Produto, representa os pratos do cardápio, adicionando ingredientes e permitindo personalização.</li>
                 <li><strong>Pedido:</strong> Gerencia os pedidos feitos pelos clientes, armazenando itens, status, endereço e forma de pagamento.</li>
                 <li><strong>Restaurante:</strong> Controla toda a operação do sistema, incluindo estoque, pedidos e fluxo financeiro.</li>
             </ul>
@@ -85,7 +85,7 @@
 
         <div id="video">
             <h2>Vídeo Apresentando Projeto</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SEU_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=XkzDEqRuaC8" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 
